--- a/src/renderer/stack/stack.html
+++ b/src/renderer/stack/stack.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Stack</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="../../styles/styles.css">
 </head>
 <body>
   <div class="stack-wrapper" id="stack-wrapper">
@@ -12,19 +14,21 @@
       <div class="stack-icon-line"></div>
     </div>
     <div class="stack-container" id="stack-container">
+      <div class="stack-header">
+        <div>
+          Stack <span class="task-count" id="task-count">0</span>
+        </div>
+        <div class="header-actions">
+          <button class="pop-button" id="pop-button" disabled>Pop</button>
+        </div>
+      </div>
+      <div class="notes-container"></div>
       <div class="status-window" id="status-window">
         <div class="status-indicator"></div>
         <div class="status-text" id="status-text">
           <div class="empty-status">No active task</div>
         </div>
       </div>
-      <div class="stack-header">
-        <div>
-          Stack <span class="task-count" id="task-count">0</span>
-        </div>
-        <button class="pop-button" id="pop-button" disabled>Pop</button>
-      </div>
-      <div class="notes-container"></div>
     </div>
   </div>
   <script src="stack.js"></script>
